sample/Views/Error/ServerError.cshtml
@{
    ViewData["Title"] = "Server Error";
}

<h1 class="text-danger">500 - Internal Server Error</h1>
<h2>Something went wrong on our end.</h2>

<p>We're sorry, but something went wrong. Please try again later.</p>

<div class="alert alert-info">
    <p><strong>Message:</strong> @ViewBag.Message</p>
    <p><strong>Status Code:</strong> @ViewBag.StatusCode</p>
</div>

<p><a href="/">Return to Home</a></p>
